fixed form width on mobile

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -101,7 +101,7 @@ nav {
 }
 
 .form {
-  width: 30%;
+  width: 90%;
   height: 30%;
   margin-left: 30%;
   margin-top: 5%;
